[gd_scene load_steps=2 format=3 uid="uid://shop_ui001"]

[ext_resource type="Script" path="res://scripts/ui/shop_manager.gd" id="1_script"]

[node name="ShopUI" type="CanvasLayer"]
layer = 9
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="WaveLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Wave 1 Complete!"

[node name="Spacer" type="Control" parent="Control/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
text = "üí∞ 1000"

[node name="Title" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Choose items to purchase:"
horizontal_alignment = 1

[node name="ItemsContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="Footer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RerollButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üîÑ Reroll (50g)"

[node name="MergeButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚öóÔ∏è Merge"

[node name="CloseButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚úï Close"

[node name="StartWaveButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è Start Wave"
